test-crate/tests/ui-post_1.39/call_site.stderr
error: abort_call_site! 2+ args test
 --> $DIR/call_site.rs:4:1
  |
4 | make_fn!(abort_call_site);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ in this macro invocation
